Archivar migraciones antiguas y crear nuevo esquema inicial en snake_case. Se movió `V9__add_birth_date_if_missing.sql` a `migrations-archive` y se creó `V1__Initial_Schema_Normalized.sql` para establecer un nuevo esquema de base de datos. Se actualizaron los archivos de configuración para producción y simple, deshabilitando Flyway en producción y ajustando la configuración de JPA.